Fix box shadow rendering early on mobile

--- a/template/style.css
+++ b/template/style.css
@@ -53,6 +53,7 @@ html {
   height: 100%;
   max-width: none;
   background-color: var(--bg-back);
+  box-shadow: none;
 }
 
 .card > div,
